--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "health inventory management system",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors",
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
     "start": "webpack-dev-server --mode development --open --hot",
@@ -22,7 +24,13 @@
   },
   "homepage": "https://github.com/bryanmezue/healthid-fe#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.4.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^24.5.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "jest": "^24.5.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "yarn": "^1.13.0"
@@ -42,5 +50,15 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "\\.('jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2)$": "<rootDir>/src/fileMock.js",
+      "\\.(css|scss)$": "<rootDir>/src/styleMock.js"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/enzyme.config.js"
+    ]
   }
 }
