--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev": "webpack --mode development",
     "start": "webpack-dev-server --mode development --open --hot",
     "lint:fix": "eslint . --ignore-path .gitignore --fix",
-    "lint": "eslint . --ignore-path .gitignore"
+    "lint": "eslint . --ignore-path .gitignore",
+    "heroku-prebuild": "npm install yarn && yarn install ",
+    "heroku-postbuild": "yarn build"
   },
   "repository": {
     "type": "git",
@@ -26,19 +28,29 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
     "@babel/preset-react": "^7.0.0",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link": "^1.2.11",
+    "apollo-link-error": "^1.1.10",
+    "apollo-link-http": "^1.5.14",
     "babel-core": "^6.26.3",
     "babel-jest": "^24.5.0",
+    "cors": "^2.8.5",
+    "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
-    "jest": "^24.5.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "css-loader": "^2.1.1",
+    "express": "^4.16.4",
     "file-loader": "^3.0.1",
+    "graphql": "^14.2.1",
+    "graphql-tag": "^2.10.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
+    "jest": "^24.5.0",
     "node-sass": "^4.11.0",
+    "react": "^16.8.4",
+    "react-apollo": "^2.5.4",
+    "react-dom": "^16.8.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "yarn": "^1.13.0"
