--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors",
     "build": "webpack --mode production",
+    "start": "webpack-dev-server  --mode development --open --hot",
     "dev": "webpack --mode development",
-    "start": "webpack-dev-server --mode development --open --hot",
     "lint:fix": "eslint . --ignore-path .gitignore --fix",
     "lint": "eslint . --ignore-path .gitignore",
     "heroku-prebuild": "npm install yarn && yarn install ",
@@ -26,8 +26,13 @@
   },
   "homepage": "https://github.com/bryanmezue/healthid-fe#readme",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/polyfill": "^7.4.0",
     "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.10",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
     "apollo-link": "^1.2.11",
@@ -48,11 +53,18 @@
     "image-webpack-loader": "^4.6.0",
     "jest": "^24.5.0",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
-    "react-apollo": "^2.5.4",
+    "react-apollo": "^2.5.3",
     "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "webpack-merge": "^4.2.1",
     "yarn": "^1.13.0"
   },
   "devDependencies": {
@@ -66,7 +78,7 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "html-webpack-plugin": "^3.2.0",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
@@ -74,8 +86,8 @@
   "jest": {
     "testEnvironment": "jsdom",
     "moduleNameMapper": {
-      "\\.('jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2)$": "<rootDir>/src/fileMock.js",
-      "\\.(css|scss)$": "<rootDir>/src/styleMock.js"
+      "\\.('jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|scss)$": "<rootDir>/__mocks__/fileMock.js"
     },
     "setupFilesAfterEnv": [
       "<rootDir>/enzyme.config.js"
