ft(setup):admin-business-setup (#7)
- Add interface for admin account setup
- Add interface for creating a business
- Add interface for success page

[Finishes #165207254 #165207226]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,5 +17,5 @@ jobs:
       - run: # run tests
           name: Run Test and Coverage
           command: |
-            yarn test -- -u --coverage
+            yarn test --coverage
             
