--- a/package.json
+++ b/package.json
@@ -36,12 +36,16 @@
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
     "apollo-link": "^1.2.11",
+    "apollo-link-context": "^1.0.17",
     "apollo-link-error": "^1.1.10",
     "apollo-link-http": "^1.5.14",
+    "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^24.5.0",
+    "babel-preset-env": "^1.7.0",
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
+    "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "express": "^4.16.4",
@@ -57,14 +61,16 @@
     "react": "^16.8.4",
     "react-apollo": "^2.5.3",
     "react-dom": "^16.8.4",
-    "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
-    "redux": "^4.0.1",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
+    "react-dropzone": "^10.1.0",
+    "react-helmet": "^5.2.0",
+    "react-hot-loader": "^4.8.2",
+    "react-router": "^5.0.0",
+    "react-toastify": "^5.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack-merge": "^4.2.1",
+    "url-loader": "^1.1.2",
     "yarn": "^1.13.0"
   },
   "devDependencies": {
@@ -86,11 +92,16 @@
   "jest": {
     "testEnvironment": "jsdom",
     "moduleNameMapper": {
-      "\\.('jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|scss)$": "<rootDir>/__mocks__/fileMock.js"
+      "\\.('jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2)$": "<rootDir>/src/fileMock.js",
+      "\\.(css|scss)$": "<rootDir>/src/styleMock.js",
+      "^components(.*)$": "<rootDir>/src/components/"
     },
     "setupFilesAfterEnv": [
       "<rootDir>/enzyme.config.js"
+    ],
+    "modulePaths": [
+        "src/components/",
+        "__tests__"
     ]
   }
 }
