--- a/package.json
+++ b/package.json
@@ -61,16 +61,17 @@
     "react": "^16.8.4",
     "react-apollo": "^2.5.3",
     "react-dom": "^16.8.4",
-    "react-router-dom": "^5.0.0",
     "react-dropzone": "^10.1.0",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.8.2",
+    "react-image-crop": "^7.0.1",
     "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-toastify": "^5.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack-merge": "^4.2.1",
     "url-loader": "^1.1.2",
+    "webpack-merge": "^4.2.1",
     "yarn": "^1.13.0"
   },
   "devDependencies": {
@@ -78,18 +79,23 @@
     "@babel/preset-env": "^7.4.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "canvas": "^2.4.1",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "jest-canvas-mock": "^2.0.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
   },
   "jest": {
+    "setupFiles": [
+      "jest-canvas-mock"
+    ],
     "testEnvironment": "jsdom",
     "moduleNameMapper": {
       "\\.('jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2)$": "<rootDir>/src/fileMock.js",
@@ -100,8 +106,8 @@
       "<rootDir>/enzyme.config.js"
     ],
     "modulePaths": [
-        "src/components/",
-        "__tests__"
+      "src/components/",
+      "__tests__"
     ]
   }
 }
