feat(password-reset): Send email to get reset link (#10)
- add forgot password modal
- add form containing email text field and send button
- link password reset mutation to form
- render success message for valid email
- render error message for invalid email

[Finishes #165207304]

--- a/package.json
+++ b/package.json
@@ -98,8 +98,8 @@
     ],
     "testEnvironment": "jsdom",
     "moduleNameMapper": {
-      "\\.('jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2)$": "<rootDir>/src/fileMock.js",
-      "\\.(css|scss)$": "<rootDir>/src/styleMock.js",
+      "\\.('jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|scss)$": "<rootDir>/__mocks__/fileMock.js",
       "^components(.*)$": "<rootDir>/src/components/"
     },
     "setupFilesAfterEnv": [
