--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-core": "^6.26.3",
     "babel-jest": "^24.5.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "dotenv-webpack": "^1.7.0",
@@ -56,6 +57,8 @@
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "jest": "^24.5.0",
+    "lodash": "^4.17.11",
+    "material-ui-pickers": "^2.2.4",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
