--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
+    "waait": "^1.0.4",
     "webpack-merge": "^4.2.1",
     "yarn": "^1.13.0"
   },
