ft(dashboard): Add app dashboard (#18)
- Add dashboard interface
- Add onClick functionality for the dashboard sections

[Finishes #163848560]

--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "jest-canvas-mock": "^2.0.0",
+    "svg-react-loader": "^0.4.6",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
