--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jest": "^24.5.0",
     "lodash": "^4.17.11",
     "material-ui-pickers": "^2.2.4",
+    "moxios": "^0.4.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
