ft(products):product-details-page (#17)
- add dynamic routing to product's id
- add interface for displaying product details
- add interface for displaying batch details
- add back button routing to products table

[Finishes #165308084]

--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,7 @@
       "required": {
       "some": [ "nesting", "id"  ]
         }
-      }]
+      }],
+    "import/no-named-as-default": 0
   }
 }
