--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/polyfill": "^7.4.0",
     "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "^3.9.3",
@@ -65,6 +66,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-apollo": "^2.5.3",
+    "react-content-loader": "^4.2.1",
     "react-dom": "^16.8.4",
     "react-dropzone": "^10.1.0",
     "react-helmet": "^5.2.0",
