--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/polyfill": "^7.4.0",
+    "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
@@ -72,9 +73,11 @@
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.8.2",
     "react-image-crop": "^7.0.2",
+    "react-phone-input-mui": "^2.6.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-toastify": "^5.0.0",
+    "request-ip": "^2.1.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
