--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@babel/preset-react": "^7.0.0",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
-    "@material-ui/styles": "^3.0.0-alpha.10",
+    "@material-ui/styles": "^4.0.1",
+    "@types/mui-datatables": "^2.1.0",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
     "apollo-link": "^1.2.11",
@@ -46,6 +47,7 @@
     "babel-jest": "^24.5.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "clsx": "^1.0.4",
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "dotenv-webpack": "^1.7.0",
@@ -55,6 +57,7 @@
     "file-loader": "^3.0.1",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
+    "history": "^4.9.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
@@ -79,6 +82,7 @@
     "react-toastify": "^5.0.0",
     "request-ip": "^2.1.3",
     "sass-loader": "^7.1.0",
+    "save": "^2.4.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "waait": "^1.0.4",
