--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "express": "^4.16.4",
+    "fg-loadcss": "^2.1.0",
     "file-loader": "^3.0.1",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
@@ -63,6 +64,7 @@
     "image-webpack-loader": "^4.6.0",
     "jest": "^24.5.0",
     "lodash": "^4.17.11",
+    "material-ui": "^0.20.2",
     "material-ui-pickers": "^2.2.4",
     "moxios": "^0.4.0",
     "mui-datatables": "2.3.0",
@@ -71,6 +73,7 @@
     "react": "^16.8.4",
     "react-apollo": "^2.5.3",
     "react-content-loader": "^4.2.1",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^16.8.4",
     "react-dropzone": "^10.1.0",
     "react-helmet": "^5.2.0",
@@ -79,6 +82,7 @@
     "react-phone-input-mui": "^2.6.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
+    "react-search-input": "^0.11.3",
     "react-toastify": "^5.0.0",
     "request-ip": "^2.1.3",
     "sass-loader": "^7.1.0",
