--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-currency-format": "^1.0.0",
     "react-dom": "^16.8.4",
     "react-dropzone": "^10.1.0",
+    "react-filter-search": "^1.0.8",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.8.2",
     "react-image-crop": "^7.0.2",
@@ -83,6 +84,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-search-input": "^0.11.3",
+    "react-to-print": "^2.1.3",
     "react-toastify": "^5.0.0",
     "request-ip": "^2.1.3",
     "sass-loader": "^7.1.0",
