--- a/package.json
+++ b/package.json
@@ -70,13 +70,14 @@
     "mui-datatables": "2.3.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.4",
+    "react": "^16.8.6",
     "react-apollo": "^2.5.3",
     "react-content-loader": "^4.2.1",
     "react-currency-format": "^1.0.0",
+    "react-dnd": "^7.4.5",
+    "react-dnd-html5-backend": "^7.4.4",
     "react-dom": "^16.8.4",
-    "react-dropzone": "^10.1.0",
-    "react-filter-search": "^1.0.8",
+    "react-dropzone": "^10.1.5",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.8.2",
     "react-image-crop": "^7.0.2",
@@ -84,6 +85,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-search-input": "^0.11.3",
+    "react-tag-input": "^6.4.0",
     "react-to-print": "^2.1.3",
     "react-toastify": "^5.0.0",
     "request-ip": "^2.1.3",
