--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@babel/polyfill": "^7.4.0",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "@date-io/date-fns": "^1.3.7",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^4.0.1",
+    "@progress/kendo-drawing": "^1.5.12",
+    "@progress/kendo-react-pdf": "^3.2.2",
     "@types/mui-datatables": "^2.1.0",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
@@ -50,6 +53,7 @@
     "clsx": "^1.0.4",
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
+    "date-fns": "^2.0.0-beta.2",
     "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
@@ -78,6 +82,7 @@
     "react-dnd-html5-backend": "^7.4.4",
     "react-dom": "^16.8.4",
     "react-dropzone": "^10.1.5",
+    "react-date-range": "^1.0.0-beta",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.8.2",
     "react-image-crop": "^7.0.2",
@@ -86,6 +91,7 @@
     "react-router-dom": "^5.0.0",
     "react-search-input": "^0.11.3",
     "react-tag-input": "^6.4.0",
+    "react-time-range-slider": "^1.1.1",
     "react-to-print": "^2.1.3",
     "react-toastify": "^5.0.0",
     "request-ip": "^2.1.3",
