--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
   "env": {
     "browser": true,
     "node": true
-  }, 
+  },
   "parserOptions": {
     "emacVersion": 6,
     "sourceType": "module",
@@ -16,7 +16,7 @@
     }
   },
   "rules": {
-    "no-console": "off",
+    "no-console": 2,
     "comma-dangle": "off",
     "strict": ["error", "global"],
     "indent": ["error", 2],
@@ -26,6 +26,7 @@
         "allowShortCircuit": true
       }
     ],
+    "react/no-unused-state": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "function-paren-newline": ["error", "consistent"],
     "no-param-reassign":["error", { "props": false }],
