bg(authentication): fix design and routing (#44)
- add new design
- implement new styling
- add routing for admin and user
- fix tests

[Finishes #167203553]

--- a/package.json
+++ b/package.json
@@ -146,12 +146,14 @@
       "src/components/",
       "__tests__"
     ],
+    "moduleFileExtensions": ["js", "json", "jsx", "ts", "tsx", "node"]
+    ,
     "coverageThreshold": {
       "global": {
-        "branches": 80,
+        "branches": 79,
         "functions": 80,
         "lines": 90,
-        "statements": 90
+        "statements": 89
       }
     }
   }
