--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,5 +17,5 @@ jobs:
       - run: # run tests
           name: Run Test and Coverage
           command: |
-            yarn test --coverage
+            yarn test --coverage -w 1
             
