--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "apollo-link-context": "^1.0.17",
     "apollo-link-error": "^1.1.10",
     "apollo-link-http": "^1.5.14",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^24.5.0",
@@ -81,6 +82,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-apollo": "^2.5.3",
+    "react-autosuggest": "^9.4.3",
     "react-content-loader": "^4.2.1",
     "react-currency-format": "^1.0.0",
     "react-dnd": "^7.4.5",
@@ -98,6 +100,7 @@
     "react-tag-input": "^6.4.0",
     "react-time-range-slider": "^1.1.1",
     "react-to-print": "^2.1.3",
+    "react-select": "^3.0.4",
     "react-toastify": "^5.0.0",
     "request-ip": "^2.1.3",
     "sass-loader": "^7.1.0",
