--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
   "rules": {
     "no-console": 2,
     "comma-dangle": "off",
+    "func-names": "off",
     "strict": ["error", "global"],
     "indent": ["error", 2],
     "semi": ["error", "always"],
