--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "lodash": "^4.17.11",
     "material-ui": "^0.20.2",
     "material-ui-pickers": "^2.2.4",
+    "moment-timezone": "^0.5.26",
     "moxios": "^0.4.0",
     "mui-datatables": "2.3.0",
     "node-sass": "^4.11.0",
@@ -85,11 +86,11 @@
     "react-autosuggest": "^9.4.3",
     "react-content-loader": "^4.2.1",
     "react-currency-format": "^1.0.0",
+    "react-date-range": "^1.0.0-beta",
     "react-dnd": "^7.4.5",
     "react-dnd-html5-backend": "^7.4.4",
     "react-dom": "^16.8.4",
     "react-dropzone": "^10.1.5",
-    "react-date-range": "^1.0.0-beta",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.8.2",
     "react-image-crop": "^7.0.2",
@@ -97,10 +98,10 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-search-input": "^0.11.3",
+    "react-select": "^3.0.4",
     "react-tag-input": "^6.4.0",
     "react-time-range-slider": "^1.1.1",
     "react-to-print": "^2.1.3",
-    "react-select": "^3.0.4",
     "react-toastify": "^5.0.0",
     "request-ip": "^2.1.3",
     "sass-loader": "^7.1.0",
@@ -149,8 +150,14 @@
       "src/components/",
       "__tests__"
     ],
-    "moduleFileExtensions": ["js", "json", "jsx", "ts", "tsx", "node"]
-    ,
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "jsx",
+      "ts",
+      "tsx",
+      "node"
+    ],
     "coverageThreshold": {
       "global": {
         "branches": 79,
