--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "date-fns": "^2.0.0-beta.2",
+    "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
