--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "canvas": "^2.4.1",
+    "enzyme-to-json": "^3.4.0",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
