--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-jest": "^24.5.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.6",
     "clsx": "^1.0.4",
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
