--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "lodash": "^4.17.11",
     "material-ui": "^0.20.2",
     "material-ui-pickers": "^2.2.4",
+    "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
     "moxios": "^0.4.0",
     "mui-datatables": "2.3.0",
@@ -101,6 +102,7 @@
     "react-hot-loader": "^4.8.2",
     "react-image-crop": "^7.0.2",
     "react-input-range": "^1.3.0",
+    "react-moment": "^0.9.6",
     "react-phone-input-mui": "^2.6.6",
     "react-phone-number-input": "^2.3.24",
     "react-router": "^5.0.0",
