--- a/package.json
+++ b/package.json
@@ -66,7 +66,6 @@
     "date-fns": "^2.0.0-beta.2",
     "dotenv": "^8.0.0",
     "dotenv-webpack": "^1.7.0",
-    "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "express": "^4.16.4",
     "fg-loadcss": "^2.1.0",
@@ -130,6 +129,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "canvas": "^2.4.1",
+    "enzyme": "3.10.0",
     "enzyme-to-json": "^3.4.0",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
