--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "material-ui": "^0.20.2",
     "material-ui-pickers": "^2.2.4",
     "moment": "^2.24.0",
+    "moment-precise-range-plugin": "^1.3.0",
     "moment-timezone": "^0.5.26",
     "moxios": "^0.4.0",
     "mui-datatables": "2.3.0",
