--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "react-moment": "^0.9.6",
     "react-phone-input-mui": "^2.6.6",
     "react-phone-number-input": "^2.3.24",
+    "react-rangeslider": "^2.2.0",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-search-input": "^0.11.3",
